--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="center"><h1>Weather check</h1></div>
     <div class="card">
-       
+        <input type="text" class="input" value="tashkent">
     </div>
     
 
